fix spacing of ListShopSearch to 10px

--- a/notritionVendorsAPP/View/Base.lproj/Main.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/Main.storyboard
@@ -668,7 +668,7 @@
                                                                 <constraint firstAttribute="width" constant="80" id="3GG-1l-fqE"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="w0E-oa-az9">
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="w0E-oa-az9">
                                                             <rect key="frame" x="95" y="0.0" width="309" height="79.666666666666671"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yfh-mu-5DP">
@@ -678,13 +678,13 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mmc-dN-ULd">
-                                                                    <rect key="frame" x="0.0" y="20.333333333333332" width="309" height="15.666666666666668"/>
+                                                                    <rect key="frame" x="0.0" y="30.333333333333339" width="309" height="15.666666666666668"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mhs-Gb-YBD" customClass="CosmosView" customModule="Cosmos">
-                                                                    <rect key="frame" x="0.0" y="36" width="120" height="43.666666666666657"/>
+                                                                    <rect key="frame" x="0.0" y="55.999999999999993" width="120" height="23.666666666666664"/>
                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <userDefinedRuntimeAttributes>
                                                                         <userDefinedRuntimeAttribute type="color" keyPath="filledColor">
